src/main/java/org/example/newsfeedteamproject/global/error/CustomException.java
package org.example.newsfeedteamproject.global.error;

import lombok.Getter;

@Getter

public class CustomException extends RuntimeException {

    private final ExceptionCode exceptionCode;

    public CustomException(ExceptionCode exceptionCode) {
        super(exceptionCode.getErrorMessage());
        this.exceptionCode = exceptionCode;
    }
}
